<resources>
    <string name="app_name">Food Delivery</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_sign_up_now"><u>Don t have an Account? Sign up now</u></string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="proceed_to_cart">Proceed to cart</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="no_favorites">No Favourites</string>
    <string name="enter_otp">Enter the OTP below:</string>
    <string name="submit">Submit</string>
    <string name="order_placed">Your Order has been placed successfully placed !</string>
    <string name="name">Name</string>
    <string name="dummy_date">date</string>
    <string name="no_orders">No Orders</string>
    <string name="order_history_static_text">Order History</string>
    <string name="filter">filter</string>
    <string name="faq_answer_one"> Inderjeet Khatri</string>
    <string name="faq_answer_two"> This FoodRunner App is fully working food ordering app with the list of
    top Restaurants from where the user can food according to his/her taste. </string>
    <string name="faq_answer_three"> Inderjeet Khatri(B.S.Anangpuria Institute of Technology and Management) along with the instructors
    at Internshala. They helped me a lot with the doubts.</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="register">Register</string>
    <string name="rs400">Rs.400</string>
    <string name="ordering_from">Ordering From :</string>
    <string name="restaurant_name_comes_here">Restaurant Name Comes Here</string>
    <string name="ok">Ok</string>
    <string name="_1">1.</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>

    <string name="mobile">mobile</string>
    <string name="f_o_o_d_r_u_n_n_e_r">F O O D R U N N E R..</string>
    <string name="email">email</string>
    <string name="q_1_name_of_the_developer_of_the_app">Q.1 Name of the Developer of the App?</string>
    <string name="q_2_about_the_app">Q.2 About the App?</string>
    <string name="q_3_credits">Q.3 Credits??</string>
    <string name="rs_400">Rs. 400</string>
    <string name="rs_300_person">Rs.300/person</string>
    <string name="otp_4_characters">OTP(4 characters)</string>
    <string name="new_password_6_characters">New Password ( 6 characters)</string>

    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password(Min.4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobile_number_10_digits">Mobile Number(10 Digits)</string>
    <string name="next">Next</string>
    <string name="prefrence_file_name">fooddelivery prefrences</string>
    <string name="ques1">What is FoodRunner and Why it is built ?</string>
    <string name="ans1">As a part of Summer Training Program, I was given this project to showcase my skills. This app is just to showcase my skills and thus is not an actual product.\nThis application fetches list of restaurants made available by API and further we can demonstrate food ordering from app using help of topics covered during the course.</string>
    <string name="ques2">So who built this application ?</string>
    <string name="ans2">Like I earlier said, this was just a project to showcase my skills, you have got an idea that I was a student under Internshala Training Program. My name is Harsh Narain and I created this project during 6 week online training which started from 2 Sep. I was in 5th Semester during completing this training course.</string>
    <string name="ques3">How much time did I spend everyday ?</string>
    <string name="ans3">Number of actual hours may vary upon your skills and knowledge. But however, Istructors recommends giving 10\-12 hours per week to understand the things and develop this application as a final project.</string>
    <string name="ques4">So how does this application work ?</string>
    <string name="ans4">This application simply requests the  API to fetch and send the data. Restaurant list and the items delivered by them are fetched. Similarly, food ordering requests are sent to the API. User may create new acoount or login through the same idea behind it.</string>
    <string name="ans5">I was trained using already created videos and text tutorials. There were variety of test, assignments and quizzes to help me learn faster and better. And at last, this project was simply an attempt by Instructor to get hands-on practice of what did I Just learnt.</string>
    <string name="ques5">How was training delivered to me by Internshala?</string>
</resources>